--- a/Exo3/build.gradle
+++ b/Exo3/build.gradle
@@ -2,14 +2,21 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+
+    ext.navigation_version = '1.0.0-beta01'
+
+    ext.lifecycle_version = '2.0.0'
+
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
